added ; at the end of each line. Also added the first ResourceType to the translations as example.

--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -7,8 +7,12 @@
 */
 
 //MARK: - CloudKit Errors Alert Handler
-"CKErrorNotLoggedInTitle" = "Não logado no iCloud"
-"CKErrorNotLoggedInMessage" = "Você precisa estar logado no iCloud para utilizar este aplicativo."
-"CKErrorAlertButtonLabel" =  "Ok"
-"CKErrorDefaultTitle" = "Algum erro ocorreu"
-"CKErrorDefaultMessage" = "Algo inesperado aconteceu, seus dados podem não terem sido salvos."
+"CKErrorNotLoggedInTitle" = "Não logado no iCloud";
+"CKErrorNotLoggedInMessage" = "Você precisa estar logado no iCloud para utilizar este aplicativo.";
+"CKErrorAlertButtonLabel" =  "Ok";
+"CKErrorDefaultTitle" = "Algum erro ocorreu";
+"CKErrorDefaultMessage" = "Algo inesperado aconteceu, seus dados podem não terem sido salvos.";
+
+
+//MARK: - ResourceTypes
+"ResourceTypeComputador" = "Computador";
