--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -7,8 +7,12 @@
 */
 
 //MARK: - CloudKit Errors Alert Handler
-"CKErrorNotLoggedInTitle" = "Not logged in iCloud"
-"CKErrorNotLoggedInMessage" = "You need to be logged in iCloud to use this app."
-"CKErrorAlertButtonLabel" =  "Ok"
-"CKErrorDefaultTitle" = "An error ocurred"
-"CKErrorDefaultMessage" = "Something unexpected ocurred, your data may not have been saved."
+"CKErrorNotLoggedInTitle" = "Not logged in iCloud";
+"CKErrorNotLoggedInMessage" = "You need to be logged in iCloud to use this app.";
+"CKErrorAlertButtonLabel" =  "Ok";
+"CKErrorDefaultTitle" = "An error ocurred";
+"CKErrorDefaultMessage" = "Something unexpected ocurred, your data may not have been saved.";
+
+
+//MARK: - ResourceTypes
+"ResourceTypeComputador" = "Computador";
