image and buttons

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -16,3 +16,9 @@
 
 //MARK: - ResourceTypes
 "ResourceTypeComputador" = "Computador";
+
+
+//MARK: - Upgrade Screen
+
+"MoveToInventory" = "Move to inventory";
+"ChangeFactory" = "Change factory";
