--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -16,3 +16,9 @@
 
 //MARK: - ResourceTypes
 "ResourceTypeComputador" = "Computador";
+
+
+//MARK: - Upgrade Screen
+
+"MoveToInventory" = "Mover para o inventário";
+"ChangeFactory" = "Trocar fábrica";
