Added all outlets and close action button function. All UI elements added to storyboard. Need to check constraints.

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -16,3 +16,11 @@
 
 //MARK: - ResourceTypes
 "ResourceTypeComputador" = "Computador";
+
+
+// MARK: - INVENTORY
+"InventoryHeader" = "Inventory";
+"PurchaseMoreFactoryButton" = "Buy more factories";
+"TotalProductionLabel" = "Total Production:";
+"SellFactoryButton" = "Sell Factory";
+"InsertFactoryButton" = "Insert on the Park";
