--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -16,3 +16,11 @@
 
 //MARK: - ResourceTypes
 "ResourceTypeComputador" = "Computador";
+
+
+// MARK: - INVENTORY
+"InventoryHeader" = "Inventário";
+"PurchaseMoreFactoryButton" = "Comprar mais fábricas";
+"TotalProductionLabel" = "Producão Total:";
+"SellFactoryButton" = "Vender Fábrica";
+"InsertFactoryButton" = "Colocar no Parque";
