Added factory info on factory detail square on Inventory. Documentation improvements

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 
 
 //MARK: - ResourceTypes
-"ResourceTypeComputador" = "Computador";
+"ResourceTypeComputador" = "Computer";
 
 
 // MARK: - INVENTORY
