Documentation improvements, Inventory actions structure implemented. Nodes states name added to each factory slot.

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -22,9 +22,9 @@
 "InventoryHeader" = "Inventory";
 "PurchaseMoreFactoryButton" = "Buy more factories";
 "TotalProductionLabel" = "Total Production:";
-"SellFactoryButton" = "Sell Factory";
+"SellFactoryButton" = "Quick sell";
 "InsertFactoryButton" = "Insert on the Park";
-
+"AnnounceFactoryButton" = "Announce";
 
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
