--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -22,8 +22,9 @@
 "InventoryHeader" = "Inventário";
 "PurchaseMoreFactoryButton" = "Comprar mais fábricas";
 "TotalProductionLabel" = "Producão Total:";
-"SellFactoryButton" = "Vender Fábrica";
+"SellFactoryButton" = "Venda rápida";
 "InsertFactoryButton" = "Colocar no Parque";
+"AnnounceFactoryButton" = "Anunciar";
 
 
 //MARK: - Upgrade Screen
