Quick Sell modal added. Insert on the park factory code improved. Moved addFactory function to static.

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -25,6 +25,11 @@
 "SellFactoryButton" = "Quick sell";
 "InsertFactoryButton" = "Insert on the Park";
 "AnnounceFactoryButton" = "Announce";
+"QuickSellQuestionConfirmationLabel" = "Do you want to confirm this Quick Sell?";
+"QuickSellEarnLabel" = "You will receive:";
+"QuickSellCancelButton" = "Cancel";
+"QuickSellConfirmButton" = "Confirm";
+
 
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
