Added marketplace scene. Storyboard, collectionView, localizable added.

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -26,6 +26,15 @@
 "InsertFactoryButton" = "Insert on the Park";
 
 
+// MARK: - MARKETPLACE
+"MarketplaceHeaderLabel" = "Marketplace";
+"BasicSelectorItem" = "Basic";
+"PremiumSelectorItem" = "Premium";
+"SellAItemButton" = "Sell item";
+"MyAnnouncesButton" = "Announces";
+"AboutNewFactoryButton" = "See more";
+
+
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
 "ChangeFactory" = "Change factory";
