--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -16,7 +16,10 @@
 
 //MARK: - ResourceTypes
 "ResourceTypeComputador" = "Computador";
-
+"ResourceTypeTablet" = "Tablet";
+"ResourceTypeSmartphone" = "Celular";
+"ResourceTypeSmarttv" = "Smart TV";
+"ResourceTypeHeadphone" = "Fone";
 
 // MARK: - INVENTORY
 "InventoryHeader" = "Inventário";
@@ -24,6 +27,12 @@
 "TotalProductionLabel" = "Producão Total:";
 "SellFactoryButton" = "Vender Fábrica";
 "InsertFactoryButton" = "Colocar no Parque";
+
+
+// MARK: - IN-GAME SHOP
+"ShopHeaderLabel" = "Loja";
+"GenerateNFTButton" = "Gerar um NFT";
+"OpenMarketplaceButton" = "Abrir Marketplace";
 
 
 // MARK: - MARKETPLACE
