--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -29,3 +29,6 @@
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
 "ChangeFactory" = "Change factory";
+"Price" = "Price";
+"Cancel" = "Cancel";
+"Purchase" = "Purchase";
