--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "ResourceTypeSmarttv" = "Smart TV";
 "ResourceTypeHeadphone" = "Fone";
 
+
 // MARK: - INVENTORY
 "InventoryHeader" = "Inventário";
 "PurchaseMoreFactoryButton" = "Comprar mais fábricas";
@@ -34,7 +35,7 @@
 "QuickSellConfirmButton" = "Confirmar";
 
 
-// MARK: - IN-GAME SHOP
+// MARK: - GAME SHOP
 "ShopHeaderLabel" = "Loja";
 "GenerateNFTButton" = "Gerar um NFT";
 "OpenMarketplaceButton" = "Abrir Marketplace";
