--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -49,7 +49,8 @@
 "MyAnnouncesButton" = "Meus anúncios";
 "AboutNewFactoryButton" = "Ver mais";
 
-// Announces
+
+//MARK: - Announces
 "AnnounceHeaderLabel" = "Meus anúncios";
 "AboutAnnounceButton" = "Ver anúncio";
 
@@ -57,3 +58,9 @@
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Mover para o inventário";
 "ChangeFactory" = "Trocar fábrica";
+
+
+//MARK: - WelcomeBack PopUp
+"YouWon" = "Você Ganhou";
+"OutOfTown" = "enquanto esteve fora da cidade";
+"ok" = "Ok!";
