--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "MyAnnouncesButton" = "Announces";
 "AboutNewFactoryButton" = "See more";
 
-// Announces
+//MARK: - Announces
 "AnnounceHeaderLabel" = "My announces";
 "AboutAnnounceButton" = "See announce";
 
@@ -57,3 +57,8 @@
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
 "ChangeFactory" = "Change factory";
+
+//MARK: - WelcomeBack PopUp
+"YouWon" = "You Won";
+"OutOfTown" = "while you were out of town";
+"ok" = "Ok!";
