Set spacing to 0 in resources array on inventory

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -39,7 +39,7 @@
 
 // MARK: - GAME SHOP
 "ShopHeaderLabel" = "Shop";
-"GenerateNFTButton" = "Generate NFT";
+"GenerateNFTButton" = "Generate Premium Factory";
 "OpenMarketplaceButton" = "Open Marketplace";
 
 
