--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 
 // MARK: - GAME SHOP
 "ShopHeaderLabel" = "Shop";
-"GenerateNFTButton" = "Generate NFT";
+"GenerateNFTButton" = "Generate Premium Factory";
 "OpenMarketplaceButton" = "Open Marketplace";
 
 
