--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 
 // MARK: - GAME SHOP
 "ShopHeaderLabel" = "Loja";
-"GenerateNFTButton" = "Gerar um NFT";
+"GenerateNFTButton" = "Gerar uma Fábrica Premium";
 "OpenMarketplaceButton" = "Abrir Marketplace";
 
 
