--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 
 //MARK: - WelcomeBack PopUp
 "YouWon" = "Você Ganhou";
-"OutOfTown" = "enquanto esteve fora da cidade";
+"OutOfTown" = "enquanto esteve longe da cidade";
 "ok" = "Ok!";
 "Price" = "Preço";
 "Cancel" = "Cancelar";
