--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -35,6 +35,9 @@
 "QuickSellEarnLabel" = "Você receberá:";
 "QuickSellCancelButton" = "Cancelar";
 "QuickSellConfirmButton" = "Confirmar";
+"AnnounceFactoryQuestionLabel" = "Por qual valor você quer vender?";
+"AnnounceCancelButton" = "Cancelar";
+"AnnounceConfirmButton" = "Anunciar";
 
 
 // MARK: - GAME SHOP
