Improved uisegmentedcontrol design

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 //MARK: - Announces
 "AnnounceHeaderLabel" = "My announces";
 "AboutAnnounceButton" = "See announce";
+"AnnounceInputPlaceholder" = "Type value";
 
 
 //MARK: - Upgrade Screen
