--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 //MARK: - Announces
 "AnnounceHeaderLabel" = "Meus anúncios";
 "AboutAnnounceButton" = "Ver anúncio";
+"AnnounceInputPlaceholder" = "Digite valor";
 
 
 //MARK: - Upgrade Screen
