Tela de settings (só visual)
Deixei o botão pronto para colocar a lógica que apaga os dados pessoais e troca o nome para um aleatorio e também os segmentedControls para colocar a lógica que controla o audio do app

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -88,3 +88,12 @@
 "HeaderLabelConfirmSell" = "Confirm your factory announce";
 "SubtitleLabelConfirmSell" = "When someone buys your factory you will receive:";
 "AnnounceConfirmButton" = "Announce";
+
+
+//MARK: - Settings
+"resetButtonLabelText" = "Reset personal informations";
+"SongLabel" = "Song";
+"SoundEffectsLabel" = "Sound effects";
+"confirmButtonSettings" = "Reset";
+"cancelButtonSettings" = "Cancel";
+"confirmResetTitle" = "Clearing your personal data will change your username, do you want to continue?";
