Changed HUD to include settings. Challenge are now outside sidebar menu

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -52,6 +52,10 @@
 "AboutNewFactoryButton" = "See more";
 
 
+// MARK: - CHALLENGES
+"UnderConstructionLabel" = "This section is under construction.";
+
+
 //MARK: - Announces
 "AnnounceHeaderLabel" = "My announces";
 "AboutAnnounceButton" = "See announce";
