Changed empty announce message

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "AnnounceHeaderLabel" = "My announces";
 "AboutAnnounceButton" = "See announce";
 "AnnounceInputPlaceholder" = "Type value";
-"EmptyAnnounceLabel" = "You do not have any announces";
+"EmptyAnnounceLabel" = "You do not have announces";
 
 
 //MARK: - Upgrade Screen
