Added empty marketplace message label. Function which pull user announces are now implemented.

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "SellAItemButton" = "Sell item";
 "MyAnnouncesButton" = "Announces";
 "AboutNewFactoryButton" = "See more";
+"EmptyMarketplaceLabel" = "Do not found any generators in offer at the moment";
 
 
 // MARK: - CHALLENGES
