--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "SellAItemButton" = "Vender um item";
 "MyAnnouncesButton" = "Meus anúncios";
 "AboutNewFactoryButton" = "Ver mais";
+"EmptyMarketplaceLabel" = "No momento não temos geradores a venda no marketplace";
 
 
 // MARK: - CHALLENGES
@@ -61,6 +62,7 @@
 "AboutAnnounceButton" = "Ver anúncio";
 "AnnounceInputPlaceholder" = "Digite valor";
 "EmptyAnnounceLabel" = "Você não possui anúncios";
+
 
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Mover para o inventário";
