Upgrade fixes and game balance in upgrade

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -67,6 +67,7 @@
 //MARK: - Upgrade Screen
 "MoveToInventory" = "Move to inventory";
 "ChangeFactory" = "Change factory";
+"level" = "level";
 
 
 //MARK: - WelcomeBack PopUp
