--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -62,6 +62,7 @@
 "AboutAnnounceButton" = "Ver anúncio";
 "AnnounceInputPlaceholder" = "Digite valor";
 "EmptyAnnounceLabel" = "Você não possui anúncios";
+"RedeemValueButton" = "Resgatar";
 
 
 //MARK: - Upgrade Screen
