--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -108,4 +108,5 @@
 "Onboarding1" = "Adquira fábricas para aumentar o seu parque industrial";
 "Onboarding2" = "Faça upgrades nas fábricas produzir mais produtos";
 "Onboarding3" = "Compre fábricas premium para ter vantagens exclusivas";
-"startPlaying" = "Comece a Jogar"
+"startPlaying" = "Comece a Jogar";
+
