Fixed audio when app is in background. App icon added. Fixed welcome back pop up

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -71,7 +71,7 @@
 
 
 //MARK: - WelcomeBack PopUp
-"YouWon" = "You Won";
+"YouWon" = "You won";
 "OutOfTown" = "while you were out of town";
 "ok" = "Ok!";
 "Price" = "Price";
