--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -69,8 +69,9 @@
 "ChangeFactory" = "Trocar fábrica";
 "level" = "nível";
 
+
 //MARK: - WelcomeBack PopUp
-"YouWon" = "Você Ganhou";
+"YouWon" = "Você ganhou";
 "OutOfTown" = "enquanto esteve longe da cidade";
 "ok" = "Ok!";
 "Price" = "Preço";
