fixes onboarding text, announces collectionview reload data

--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "SellAItemButton" = "Vender um item";
 "MyAnnouncesButton" = "Meus anúncios";
 "AboutNewFactoryButton" = "Ver mais";
-"EmptyMarketplaceLabel" = "No momento não temos geradores a venda no marketplace";
+"EmptyMarketplaceLabel" = "No momento não temos fábricas a venda no marketplace";
 
 
 // MARK: - CHALLENGES
