Fixes and improvements on upgrade section

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -66,6 +66,7 @@
 
 
 //MARK: - Upgrade Screen
+"UpgradeHeaderLabel" = "Upgrades";
 "MoveToInventory" = "Move to inventory";
 "ChangeFactory" = "Change factory";
 "level" = "level";
