factory position fixes and font sizes in upgrade

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -54,7 +54,7 @@
 
 
 // MARK: - CHALLENGES
-"UnderConstructionLabel" = "This section is under construction.";
+"UnderConstructionLabel" = "Coming Soon";
 
 
 //MARK: - Announces
