HapticFeedback and Welcomeback PopUp fix

--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -108,6 +108,7 @@
 "ConfirmResetQuestionTitle" = "Clearing your personal data will change your username, do you want to continue?";
 "CancelResetAction" = "Cancel";
 "ConfirmResetAction" = "Reset";
+"HapticsLabel" = "Haptics Feedback";
 
 
 //MARK: - Onboarding
