--- a/Idle Factory/en.lproj/Localizable.strings
+++ b/Idle Factory/en.lproj/Localizable.strings
@@ -54,7 +54,7 @@
 
 
 // MARK: - CHALLENGES
-"UnderConstructionLabel" = "Coming Soon";
+"UnderConstructionLabel" = "Coming Soon!";
 
 
 //MARK: - Announces
