--- a/Idle Factory/pt-BR.lproj/Localizable.strings
+++ b/Idle Factory/pt-BR.lproj/Localizable.strings
@@ -54,7 +54,7 @@
 
 
 // MARK: - CHALLENGES
-"UnderConstructionLabel" = "Em Breve";
+"UnderConstructionLabel" = "Em Breve!";
 
 
 //MARK: - Announces
@@ -113,7 +113,7 @@
 
 //MARK: - Onboarding
 "Onboarding1" = "Adquira fábricas para aumentar o seu parque industrial";
-"Onboarding2" = "Faça upgrades nas fábricas produzir mais produtos";
+"Onboarding2" = "Faça upgrades nas fábricas para produzir mais produtos";
 "Onboarding3" = "Compre fábricas premium para ter vantagens exclusivas";
 "startPlaying" = "Comece a Jogar";
 
